@@ -1,3 +1,8 @@
+2012-05-03  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/53186
+	* g++.dg/other/final2.C: New.
+
 2012-05-03  Jakub Jelinek  <jakub@redhat.com>
 
 	PR debug/53174
